deploy/canary/istio-canary-release-90percent.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: whatos-gateway
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - whatos.denicolafamily.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: whatos-virtualservice
spec:
  hosts:
  - whatos.denicolafamily.com
  gateways:
  -  whatos-gateway
  http:
  - route:
    - destination:
        host: whatos
        subset: v2
      weight: 90
    - destination:
        host: whatos
        subset: v1
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: whatos
spec:
  host: whatos
  subsets:
  - name: v1
    labels:
      app: whatos
      version: v1
  - name: v2
    labels:
      app: whatos
      version: v2
